logs_inference_spare/inference_spare_ef.log
[KeOps] Compiling cuda jit compiler engine ... 
[KeOps] Warning : There were warnings or errors compiling formula :
In file included from /home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:21:0:
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp: In function ‘int Compile(const char*, const char*, int, int, const char*)’:
<command-line>:0:20: error: ‘nvrtcGetCUBINSize’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:20: note: suggested alternative: ‘nvrtcGetPTXSize’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:16: error: ‘nvrtcGetCUBIN’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~
<command-line>:0:16: note: suggested alternative: ‘nvrtcGetPTX’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~

OK
Starting inference for ROI 1
Loading data from: ./data/subjectsamples_longclean_dl_muse_spare_allstudies.csv
Loading test IDs from: ./data/test_subject_allstudies_ids_dl_muse_spare0.pkl
Loading model from: ./models_spare/population_deep_kernel_gp_1.pth
Loaded data with 11279 samples
Loaded 617 test subject IDs
Loading trained model...
Model loaded successfully with training data
Training data shape: torch.Size([9057, 149])
Training targets shape: torch.Size([9057])
depth [(149, 74)]
final layer (149, 74)
Final Layer 149 74
Preparing test data...
Test data shape: torch.Size([2222, 149])
Test Y ROI shape: torch.Size([2222])
Making predictions...

Inference Results for ROI 1:
MAE: 0.1144
MSE: 0.0284
RMSE: 0.1685
R²: 0.9699
Coverage: 0.9914
Interval Width: 1.2316
Results saved to: ./inference_results_spare/inference_results_spare_ef.csv
Summary metrics saved to: ./inference_results_spare/inference_results_spare_ef_summary.json
Inference completed successfully!
